--- a/app/src/main/res/layout/activity_myorder_refund.xml
+++ b/app/src/main/res/layout/activity_myorder_refund.xml
@@ -31,11 +31,13 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
                     <ImageView
+                        android:id="@+id/ac_myOrderRefund_iv"
                         android:layout_width="@dimen/dp_22"
                         android:layout_height="@dimen/dp_22"
                         android:layout_marginLeft="@dimen/dp_12"
                         android:src="@drawable/refund_success"/>
                     <TextView
+                        android:id="@+id/ac_myOrderRefund_tv_state"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/dp_8"
@@ -43,6 +45,7 @@
                         android:textColor="@color/text3"
                         android:text="退款成功"/>
                     <TextView
+                        android:id="@+id/ac_myOrderRefund_tv_time"
                         android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -58,6 +61,7 @@
                     android:layout_height="1dp"
                     android:background="@color/background"/>
                 <LinearLayout
+                    android:id="@+id/ac_myOrderRefund_ll_reason"
                     android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_274"
@@ -74,6 +78,7 @@
                         android:layout_marginTop="@dimen/dp_10"
                         android:background="@drawable/stroke_gray1_15">
                         <TextView
+                            android:id="@+id/ac_myOrderRefund_tv_reason"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_margin="@dimen/dp_8"
@@ -96,6 +101,7 @@
                         android:orientation="horizontal"
                         android:gravity="center">
                         <TextView
+                            android:id="@+id/ac_myOrderRefund_tv_again"
                             android:layout_width="@dimen/dp_130"
                             android:layout_height="@dimen/dp_35"
                             android:gravity="center"
@@ -104,6 +110,7 @@
                             android:text="再次申请"
                             android:background="@drawable/theme_conner_5"/>
                         <TextView
+                            android:id="@+id/ac_myOrderRefund_tv_chat1"
                             android:layout_width="@dimen/dp_130"
                             android:layout_height="@dimen/dp_35"
                             android:gravity="center"
@@ -308,7 +315,7 @@
                                         android:id="@+id/ac_myOrderRefund_tv_option"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="申请售后"
+                                        android:text="退款中"
                                         android:textColor="@color/text3"
                                         android:textSize="@dimen/sp_13" />
                                 </LinearLayout>
